# LearnAgent

./: .env.example  .gitignore  .mcp.example.json  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/context/: compaction.py  context_builder.py
app/core/: __init__.py  agent_loop.py  llm_router.py  output_schema.py  query_engine.py  router.py  workflow.py
app/entrypoint/: cli.py
app/llm/: __init__.py  base.py  deepseek_client.py  mock_client.py  model_selector.py
app/mcp/: adapter.py  client.py  loader.py
app/memory/: __init__.py  memory_store.py  session_store.py
app/safety/: permission.py
app/skills/: loader.py
app/tasks/: __init__.py  (+1 more)
docs/: agent_design_reference_full.md  decisions.md  learnagent_architecture_design_v1.md  stage-one-acceptance.md  testrecord.md  testrecord3.md
plans/: plan1.md
scripts/: _test_router.py  sandbox_test.py  smoke_agent_real.py  smoke_github_repo_real.py  smoke_llm_real.py  smoke_read_url_real.py
src/: config.py  llm.py  logging_config.py  main.py
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_compaction.py  test_concrete_tools.py  test_config.py  test_github_repo_analyzer.py  test_github_tool.py  test_integration.py  test_llm_client.py  test_mcp.py  test_memory.py  test_memory_tools.py  test_mock_tools.py  test_model_selector.py  test_models.py  test_output_schema.py  test_persistence.py  test_plan_execute_agent.py  test_plan_mode.py  test_query_engine.py  test_react_agent.py  test_read_url_tool.py  test_real_tools.py  test_registry.py  test_router.py  test_settings.py  test_skills.py  test_skills_integration.py  test_smoke_scripts.py  test_storage.py  test_todo_store.py  test_todo_tools.py  test_tool_base.py  test_tool_registry.py  test_topic_management.py  test_v11_memory.py  test_v11_tools_registry.py  test_workflow.py  test_workspace_tools.py
(+64 files in other folders)
