[project]
name = "learnagent"
version = "0.1.0"
description = "AI 学习助手 Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.3.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "structlog>=24.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 需要真实 API 调用的集成测试",
]

[tool.ruff]
line-length = 100
target-version = "py311"
