[project]
name = "learnagent-codex"
version = "0.1.0"
description = "CLI-first LearnAgent rebuild experiment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
