[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "learnagent"
version = "0.1.0"
description = "AI learning assistant for self-learners"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
